# AdGuardHome-LogSync

./: README.md  main.py  pyproject.toml  requirements.txt
adguardhome_logsync/: __main__.py  main.py
adguardhome_logsync/utils/: querylog_copy.py  querylog_merge.py
utils/: querylog_merge.py
